[package]
name = "aoc_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.10.2"


[[bin]]
name = "d1"
path = "src/bin/d1.rs"

[[bin]]
name = "d2"
path = "src/bin/d2.rs"
